# computer-graphics-project

./: CMakeLists.txt  filter_normal.cpp  filter_normal.h
Plugin 1/: CMakeLists.txt  README.md  filter_normal.cpp  filter_normal.h
Plugin 2/: README.md
Plugin 2/data/: horse.off  pig.off
Plugin 2/evaluate/: after.py  before.py  metrics.ipynb  run.sh
Plugin 2/src/: CMakeLists.txt  filter_idt.cpp  filter_idt.h
